# tinycsp

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
notebook/: graph_cloring.py  n_queen.py  sudoku.py
python/tinycsp/: __init__.py  constraint.py  domain.py  exceptions.py  tinycsp.py  types.py  variable.py
src/: constraint.rs  domain.rs  lib.rs  solver.rs
